samples/_failures_safe/1761040527_c268b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cdca9513.c: In function ‘tokenize’:
./samples/SAFE/__tmp_cdca9513.c:151:17: error: expected expression at end of input
  151 |                 advance =
      |                 ^~~~~~~
./samples/SAFE/__tmp_cdca9513.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cdca9513.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cdca9513.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_cdca9513.c:151:17: error: expected declaration or statement at end of input
